--- a/static/sections/account.html
+++ b/static/sections/account.html
@@ -1,4 +1,4 @@
-<section id="account" data-aside="features" data-transition="slide">
+<section id="account" data-transition="slide">
 
     <header data-title="Account">
         <nav>
@@ -7,22 +7,22 @@
     </header>
 
     <article class="active list scroll">
-        <ul>
+        <ul id="account_detail">
             <li>
                 <strong>Username</strong>
-                <small>vi</small>
+                <small>{{username}}</small>
             </li>
             <li>
                 <strong>Name</strong>
-                <small>นายแพทย์วิเชียร สมมิตร</small>
+                <small>{{fullname}}</small>
             </li>
             <li>
                 <strong>Hostname</strong>
-                <small>http://127.0.0.1/gisiph/</small>
+                <small>{{hostname}}</small>
             </li>
             <li>
                 <strong>Timestamp</strong>
-                <small>5 min ago.</small>
+                <small>{{timestamp}}</small>
             </li>
         </ul>
         
