--- a/static/asides/features.html
+++ b/static/asides/features.html
@@ -18,7 +18,7 @@
                 <span class="icon bar-chart"></span>
                 <strong>Charts</strong>
             </li>
-            <li data-change-section="sync-data">
+            <li data-change-section="sync">
                 <span class="icon retweet"></span>
                 <strong>Sync data</strong>
             </li>
