--- a/static/sections/locations.html
+++ b/static/sections/locations.html
@@ -16,7 +16,7 @@
 			<span class="icon warning-sign"></span>
             <strong>No Internet Connection</strong>
             <small>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident!</small>
-			<button class="anchor" data-label="Refresh"></button>
+			<button class="anchor" data-label="Refresh" data-icon="refresh"></button>
 		</div>
 	</article>
 
