--- a/static/sections/login.html
+++ b/static/sections/login.html
@@ -2,22 +2,22 @@
 
 	<header data-back="chevron-left" data-title="Login"></header>
 
-	<article class="active list scroll">
+	<article class="active scroll indented">
 		<div class="form margin-top">
 
-			<fieldset>
-				<input type="text" class="text align_center" placeholder="Username" />
+			<fieldset data-icon="user">
+				<input type="text" class="text align_center" placeholder="Username">
 			</fieldset>
 
-			<fieldset>
-				<input type="password" class="text align_center" placeholder="Password" />
+			<fieldset data-icon="lock">
+				<input type="password" class="text align_center" placeholder="Password">
 			</fieldset>
 
-			<fieldset class="margin-top">
-				<input type="url" class="text align_center" placeholder="Hostname" />
+			<fieldset data-icon="hdd" class="margin-top">
+				<input type="url" class="text align_center" placeholder="Hostname">
 			</fieldset>
 
-			<button class="anchor accept margin-top" data-label="Connect"></button>
+			<button class="anchor accept margin-top" data-label="Connect" data-icon="bolt"></button>
 		</div>
 	</article>
 
