--- a/static/sections/management.html
+++ b/static/sections/management.html
@@ -16,7 +16,7 @@
 			<span class="icon home"></span>
             <strong>Houses Empty</strong>
             <small>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident!</small>
-			<button class="anchor" data-view-section="sync-data" data-view-article="import" data-label="Import data..."></button>
+			<button class="anchor" data-view-section="sync-data" data-view-article="import" data-label="Import data..." data-icon="comments"></button>
 		</div>
 	</article>
 
