--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <head>
 	<meta charset="UTF-8">
 	<title>GISIPH</title>
+	<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1, maximum-scale=1">
 
 	<link rel="stylesheet" href="packages/lungo-2.2.1/lungo.css">
 	<link rel="stylesheet" href="packages/lungo-2.2.1/lungo.icon.css">
 	<link rel="stylesheet" href="packages/lungo-2.2.1/lungo.theme.css">
 	<link rel="stylesheet" href="static/stylesheet/gisiph.css">
+
+	<!-- <script src="packages/cordova-2.7.0/cordova.js"></script> -->
 </head>
 <body>
 
