--- a/static/sections/sync.html
+++ b/static/sections/sync.html
@@ -9,7 +9,7 @@
 	<nav data-control="groupbar">
 		<a href="#" data-view-article="import" class="active">Import</a>
 		<a href="#" data-view-article="export">Export</a>
-		<a href="#" data-view-article="detail">Detail</a>
+		<!-- <a href="#" data-view-article="detail">Detail</a> -->
 	</nav>
 
 
@@ -19,11 +19,6 @@
 			<div id="sync_import" class="margin-top margin-bottom"></div>
 
 			<button class="anchor accept margin-top margin-bottom hide" data-label="Import" data-icon="download"></button>
-			<div class="progress" data-progress>
-				<span class="bar">
-					<span class="value"></span>
-				</span>
-			</div>
 		</div>
 	</article>
 
