--- a/static/sections/charts.html
+++ b/static/sections/charts.html
@@ -13,8 +13,10 @@
 			<fieldset>
 				<label class="select">
 					<select id="chart_selected">
-						<option value="percent_district_chronics">ผู้ป่วยโรคเรื้อรังในตำบล</option>
-						<option value="percent_village_chronics">ผู้ป่วยโรคเรื้อรังในแต่ละหมู่บ้าน</option>
+						<optgroup label="แผนภูมิอัตราผู้ป่วยโรคเรื้อรัง">
+							<option value="percent_district_chronics">ผู้ป่วยโรคเรื้อรัง</option>
+							<option value="percent_village_chronics">ผู้ป่วยโรคเรื้อรังในแต่ละหมู่บ้าน</option>
+						</optgroup>
 					</select>
 				</label>
 			</fieldset>
