fixed pie chart display both chronics

--- a/static/sections/charts.html
+++ b/static/sections/charts.html
@@ -16,6 +16,7 @@
 						<optgroup label="แผนภูมิอัตราผู้ป่วยโรคเรื้อรัง">
 							<option value="percent_district_chronics">ผู้ป่วยโรคเรื้อรัง</option>
 							<option value="percent_village_chronics">ผู้ป่วยโรคเรื้อรังในแต่ละหมู่บ้าน</option>
+							<option value="percent_year_chronics">ผู้ป่วยโรคเรื้อรังในแต่ละปี</option>
 						</optgroup>
 					</select>
 				</label>
