make hypertension chart by colors

--- a/static/sections/charts.html
+++ b/static/sections/charts.html
@@ -18,6 +18,8 @@
 							<option value="percent_village_chronics">ผู้ป่วยโรคเรื้อรังในแต่ละหมู่บ้าน</option>
 							<option value="percent_year_chronics">ผู้ป่วยโรคเรื้อรังในแต่ละปี</option>
 						</optgroup>
+						<optgroup class="hypertension_chart" label="แผนภูมิผู้ป่วยโรคความดันโลหิตสูง"></optgroup>
+						<optgroup class="diabetes_chart" label="แผนภูมิผู้ป่วยโรคเบาหวาน"></optgroup>
 					</select>
 				</label>
 			</fieldset>
