add color_from, modify_by and fixed remove photo
- บอกได้่ว่าสีที่ป่วย ป่วยด้วยโรคอะไร
- ใคร เพิ่มลบแก้ไขอะไร เวลาไหน
- ลบรูปที่ถ่ายจากมือถือ
- add file main.html for dummy (when open on mobile program will not
error connection server fail.)

--- a/static/sections/charts.html
+++ b/static/sections/charts.html
@@ -24,6 +24,10 @@
 				</label>
 			</fieldset>
 			<div id="chart_visualization"></div>
+			<!--<fieldset>
+				<label>ข้อมูลวันที่</label>
+				<input type="text" value="{{timestamp}}" readonly>
+			</fieldset>-->
 		</div>
 
 		<ul id="chart_detail" class="list"></ul>
