--- a/static/sections/login.html
+++ b/static/sections/login.html
@@ -6,15 +6,15 @@
 		<div class="form margin-top">
 
 			<fieldset data-icon="user">
-				<input type="text" class="text align_center" placeholder="Username">
+				<input type="text" class="text" placeholder="Username">
 			</fieldset>
 
 			<fieldset data-icon="lock">
-				<input type="password" class="text align_center" placeholder="Password">
+				<input type="password" class="text" placeholder="Password">
 			</fieldset>
 
 			<fieldset data-icon="hdd" class="margin-top">
-				<input type="url" class="text align_center" placeholder="Hostname">
+				<input type="url" class="text" placeholder="Hostname">
 			</fieldset>
 
 			<button class="anchor accept margin-top" data-label="Connect" data-icon="bolt"></button>
