--- a/main.html
+++ b/main.html
@@ -24,7 +24,7 @@
 			<div class="empty">
 				<span class="icon user-md"></span>
 				<strong>Account Empty</strong>
-				<small>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident!</small>
+				<small>Please login to use this application. You can import data from GISIPHo server.</small>
 				<button class="anchor" data-view-section="login" data-label="Please login..." data-icon="comments"></button>
 			</div>
 		</article>
