add stack chart

--- a/static/sections/charts.html
+++ b/static/sections/charts.html
@@ -14,12 +14,16 @@
 				<label class="select">
 					<select id="chart_selected">
 						<optgroup label="แผนภูมิอัตราผู้ป่วยโรคเรื้อรัง">
-							<option value="percent_district_chronics">ผู้ป่วยโรคเรื้อรัง</option>
-							<option value="percent_village_chronics">ผู้ป่วยโรคเรื้อรังในแต่ละหมู่บ้าน</option>
-							<option value="percent_year_chronics">ผู้ป่วยโรคเรื้อรังในแต่ละปี</option>
+							<option value="percent_district_chronics">สัดส่วนของผู้ป่วยโรคเรื้อรัง</option>
+							<option value="percent_village_chronics">สัดส่วนของผู้ป่วยโรคเรื้อรังในแต่ละหมู่บ้าน</option>
+							<option value="percent_year_chronics">จำนวนผู้ป่วยโรคเรื้อรังที่เพิ่มขึ้นในแต่ละปี</option>
 						</optgroup>
-						<optgroup class="hypertension_chart" label="แผนภูมิผู้ป่วยโรคความดันโลหิตสูง"></optgroup>
-						<optgroup class="diabetes_chart" label="แผนภูมิผู้ป่วยโรคเบาหวาน"></optgroup>
+						<optgroup class="hypertension_chart" label="จำนวนของผู้ป่วยโรคความดันโลหิตสูงจำแนกตามระดับความรุนแรง"></optgroup>
+						<optgroup class="diabetes_chart" label="จำนวนของผู้ป่วยโรคเบาหวานจำแนกตามระดับความรุนแรง"></optgroup>
+						<optgroup label="แผนภูมิจำแนกตามระดับความรุนแรงและหมู่บ้าน">
+							<option value="stack_hypertension">จำนวนของผู้ป่วยโรคความดันโลหิตสูงจำแนกตามระดับความรุนแรงและหมู่บ้าน</option>
+							<option value="stack_diabetes">จำนวนของผู้ป่วยโรคเบาหวานจำแนกตามระดับความรุนแรงและหมู่บ้าน</option>
+						</optgroup>
 					</select>
 				</label>
 			</fieldset>
